--- a/index.html
+++ b/index.html
@@ -46,16 +46,13 @@
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <div class="navbar-collapse collapse hide" id="mainNavbar" style="">
+      <div class="navbar-collapse collapse hide" id="mainNavbar">
         <ul class="navbar-nav col-md justify-content-end text-uppercase">
           <li class="nav-item">
-            <a class="nav-link" href="#">In the home</a>
+            <a class="nav-link" href="#">Project Gallery</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">In the garden</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Site &amp; small works</a>
+            <a class="nav-link" href="#">Book Us</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Contact</a>
