--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
   <!-- Angular -->
   <script type="text/javascript" src="node_modules/angular/angular.js"></script>
   <script type="text/javascript" src="node_modules/angular-route/angular-route.js"></script>
-  <script type="text/javascript" src="node_modules/angular-storage/dist/angular-storage.js"></script>
 </head>
 
 <body>
@@ -49,13 +48,13 @@
       <div class="navbar-collapse collapse hide" id="mainNavbar">
         <ul class="navbar-nav col-md justify-content-end text-uppercase">
           <li class="nav-item">
-            <a class="nav-link" href="#">Project Gallery</a>
+            <a class="nav-link" href="/projects">Project Gallery</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Book Us</a>
+            <a class="nav-link" href="/book">Book Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="/contact">Contact</a>
           </li>
         </ul>
       </div>
@@ -63,7 +62,7 @@
   </header>
 
 
-  <main ng-view></main>
+  <main ng-view autoscroll></main>
 
 
   <footer class="py-5">
@@ -87,6 +86,7 @@
   <script src="js/app.js"></script>
   <script src='js/controller.js'></script>
   <script src='js/service.js'></script>
+  <script src='js/directive.js'></script>
 </body>
 
 </html>
